# QRCodeGenerator

./: .gitignore  LICENSE  README.md  pyproject.toml
qrcodegen/: __init__.py  cli.py
qrcodegen/components/: __init__.py  page.py
qrcodegen/components/buttons/: __init__.py  copy_button.py  delete_button.py  paste_button.py  register_button.py
qrcodegen/components/fields/: __init__.py  qrcode_field.py  text_field.py
qrcodegen/components/table/: __init__.py  datatable.py
qrcodegen/components/table/cells/: namecell.py
qrcodegen/database/: db.py
qrcodegen/models/: url.py
qrcodegen/utils/: images.py
