[tool.poetry]
name = "qr-code-generator"
version = "0.1.0"
description = ""
authors = ["kbyky <kbyky36@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "qrcodegen"}
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
flet = "^0.17.0"
sqlalchemy = "^2.0.23"
pyperclip = "^1.8.2"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
pre-commit = "^3.6.0"
mypy = "^1.7.1"
black = "^23.12.0"
blacken-docs = "^1.16.0"
pytest = "^7.4.3"
pyinstaller = "^6.3.0"
pillow = "^10.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
